# geoschema

./: .gitignore  README.md  pants.toml  pyproject.toml  pytest.ini
.github/workflows/: python-test.yml
geoschema/: __init__.py  geojson_schemas.py  geojson_utils.py  google_s2.py  logger.py  proj_utils.py  uuid_utils.py  version.py
tests/: conftest.py  test_geojson_schemas.py  test_geojsons_utils.py  test_geoschema.py  test_google_s2.py  test_uuid_utils.py
tests/data/: stations.geojson  stations.geojsons
