[tool.poetry]
name = "geoschema"
version = "0.1.0"
description = "A collection of GeoJSON schema and tools"

authors = [
    "Darren Weber <dazza-codes@github.com>",
]
license = "Apache-2.0"

readme = "README.md"  # Markdown files are supported
repository = "https://github.com/dazza-codes/geoschema.git"
homepage = "https://github.com/dazza-codes/geoschema"

keywords = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: GIS Utilities",
]

include = ["geoschema/**/*.py"]
exclude = [
    "geoschema/BUILD",
    "tests/**/*",
]

packages = [
    {include = "geoschema"}
]

[tool.poetry.dependencies]
python = "^3.7.1,<4.0.0"

numpy = { version = "^1.0.0,<1.22.0", python = "~3.7" }
pandas = { version = "^1.0.0,<1.4.0", python = "~3.7" }
geopandas = "^0.10.2"
Shapely = "^1.8.2"
s2sphere = "^0.2.5"

geojson = "^2.5.0"
geobuf = "^1.1.1"
marshmallow = "^3.16.0"
pydantic = "^1.9.1"

loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
py-dev-deps = "^0.3.0"

[tool.isort]
profile = "black"
force_single_line = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
